<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:visibility="visible"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:visibility="visible"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="527dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="623dp" />

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:visibility="visible"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="623dp" />

    <Button
        android:id="@+id/virgola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virgola"
        android:visibility="visible"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="623dp" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/five"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        tools:layout_editor_absoluteX="126dp" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:visibility="visible"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:visibility="visible"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:visibility="visible"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/minus"
        android:layout_width="73dp"
        android:layout_height="39dp"
        android:text="@string/minus"
        android:visibility="visible"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="399dp" />

    <Button
        android:id="@+id/plus"
        android:layout_width="73dp"
        android:layout_height="39dp"
        android:text="@string/plus"
        android:visibility="visible"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/division"
        android:layout_width="73dp"
        android:layout_height="39dp"
        android:text="@string/div"
        android:visibility="visible"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/per"
        android:layout_width="73dp"
        android:layout_height="39dp"
        android:text="@string/x"
        android:visibility="visible"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="584dp" />

    <TextView
        android:id="@+id/textViewRisultato"
        android:layout_width="323dp"
        android:layout_height="66dp"
        android:text="@string/risultato"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="402dp"
        android:layout_height="42dp"
        android:text="@string/calcolatrice"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>